# testing_crew

./: README.md  brand_summary.csv  pyproject.toml  report.md  test.py
.continue/models/: new-model-1.yaml
src/testing_crew/: crew.py  first.ipynb  main.py  test.json  test.txt
src/testing_crew/config/: config.yaml  tasks.yaml
