[project]
name = "testing_crew"
version = "0.1.0"
description = "testing_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.118.0,<1.0.0",
    "dotenv>=0.9.9",
    "serpapi>=0.1.5",
]

[project.scripts]
testing_crew = "testing_crew.main:main"
run_crew = "testing_crew.main:main"
train = "testing_crew.main:train"
replay = "testing_crew.main:replay"
test = "testing_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
